                   Microsoft SQL Server 08.00.2039 ( JTDS JDBC - Driver 1.2.2 )
  MySQL Dialect  : MySQL Version 5.0.45-community-nt (MySQL Connector 5.1.5 )
                   MySQL Version 4.1.22-community-nt (MySQL Connector 5.1.5 )
  Oracle Dialect : Oracle Database 10g Release 10.2.0.3.0 - Production ( Oracle 10 client )
* New JGraph Version ( Image Export is now working correctly )
* Added support for index editing
* Removed DB2 dialect ( no test environment available )
* Added generic JDBC dialect
* Added schema validation for loading ERDesigner models from file
* Added configuration files for dialect datatypes
     
Release 1.0.2

* First version including the SquirrelSQL plugin ( for Squirrel 2.6.4 )
* Added SquirrelDialect to interface with the Squirrel DatabaseMedaData API
* DOT Path ( AT&T Layout library ) is now configurable with preferences dialog
* Tested reverse engineering with the following databases
  PostgreSQL Dialect : PostgreSQL 8.2.6 ( JDBC3 Driver )
  
Release 1.1

* Refactored domain system for support of size, decimal digits and radix
* Added model modification tracker to track model changes
* Removed generic jdbc dialect
* Added unit tests for MySQL, MSSQL, Oracle and Postgres dialect
* Added first beta of DB2 support
* Removed domain dictionary ( Now in Table editor )
* Removed default value dictionalry ( Now in Table editor )
* Added Exception notifier dialog
* Added SQL Browser window
* Added export functionality for DDL scripts for whole model
* Added export functionality for DDL scripts of last changes
* Added saving of model modifications in separate SQL files

Release 1.1.1

* Bug Fixing in Squirrel Plugin ( Connection was closed during Reverse Engineering )
* Bug Fixing in Squirrel Plugin ( DDL Generation fails in PluginMode )

Release 1.1.2

* Bug Fixing for some Swing Layouts to make then viewable in Netbeans
* Implemented Layouters powered by Eclipse ZEST